--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: 16
 
-      - name: "Install NPM dependencies"
+      - name: "Install npm dependencies"
         run: "npm ci"
 
       - name: "Run Prettier"
@@ -40,7 +40,7 @@ jobs:
         with:
           node-version: 16
 
-      - name: "Install NPM dependencies"
+      - name: "Install npm dependencies"
         run: "npm ci"
 
       - name: "Run ESLint"
@@ -59,7 +59,7 @@ jobs:
         with:
           node-version: 16
 
-      - name: "Install NPM dependencies"
+      - name: "Install npm dependencies"
         run: "npm ci"
 
       - name: "Run Jest"
