--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -8,8 +8,8 @@ on:
       - "!main"
 
 jobs:
-  coding-standard:
-    name: "Coding Standards"
+  checks:
+    name: "Checks"
     runs-on: "ubuntu-latest"
 
     steps:
@@ -27,40 +27,8 @@ jobs:
       - name: "Run Prettier"
         run: "npm run format-check"
 
-  static-code-analysis:
-    name: "Static Code Analysis"
-    runs-on: "ubuntu-latest"
-
-    steps:
-      - name: "Checkout"
-        uses: "actions/checkout@v3"
-
-      - name: "Setup node"
-        uses: "actions/setup-node@v3"
-        with:
-          node-version: 16
-
-      - name: "Install npm dependencies"
-        run: "npm ci"
-
       - name: "Run ESLint"
         run: "npm run lint"
-
-  tests:
-    name: "Tests"
-    runs-on: "ubuntu-latest"
-
-    steps:
-      - name: "Checkout"
-        uses: "actions/checkout@v3"
-
-      - name: "Setup node"
-        uses: "actions/setup-node@v3"
-        with:
-          node-version: 16
-
-      - name: "Install npm dependencies"
-        run: "npm ci"
 
       - name: "Run Jest"
         run: "npm run test"
