--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "validator",
+  "name": "@octocloud/generators",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "format-check": "prettier --check \"**/*.{ts,js,css,json,md}\"",
     "format": "prettier --write \"**/*.{ts,js,css,json,md}\"",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
     "test": "jest --verbose",
     "test-coverage": "jest --coverage",
-    "prepare": "husky install",
+    "prepare": "npm run build",
     "checks": "npm run format && npm run lint && npm run test"
   },
   "repository": {
@@ -26,6 +28,7 @@
   "homepage": "https://github.com/octotravel/octo-generator#readme",
   "devDependencies": {
     "@octocloud/types": "^1.4.7",
+    "@octocloud/validators": "^1.0.2",
     "@types/jest": "^28.1.8",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
@@ -38,7 +41,6 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.7.4",
-    "@octocloud/validators": "^1.0.0",
     "date-fns": "^2.29.1",
     "date-fns-tz": "^1.3.6"
   }
