--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "url": "https://github.com/octotravel/octo-generator/issues"
   },
   "homepage": "https://github.com/octotravel/octo-generator#readme",
+  "dependencies": {
+    "@octocloud/types": "1.4.7",
+    "date-fns": "^2.29.1",
+    "date-fns-tz": "^1.3.6"
+  },
   "devDependencies": {
-    "@octocloud/types": "^1.4.7",
     "@octocloud/validators": "^1.0.2",
     "@types/jest": "^28.1.8",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.1",
@@ -40,8 +45,6 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
-    "typescript": "^4.7.4",
-    "date-fns": "^2.29.1",
-    "date-fns-tz": "^1.3.6"
+    "typescript": "^4.7.4"
   }
 }
