--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   },
   "homepage": "https://github.com/octotravel/octo-generator#readme",
   "dependencies": {
-    "@octocloud/types": "1.4.7",
+    "@octocloud/types": "github:octotravel/octo-types",
     "date-fns": "^2.29.1",
     "date-fns-tz": "^1.3.6"
   },
   "devDependencies": {
     "@octocloud/validators": "^1.0.2",
-    "@types/jest": "^28.1.8",
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
@@ -41,10 +41,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.3",
+    "jest": "^29.4.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "ts-jest": "^28.0.8",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.7.4"
   }
 }
