--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   "dependencies": {
     "@octocloud/types": "github:octotravel/octo-types",
     "date-fns": "^2.29.1",
-    "date-fns-tz": "^1.3.6"
+    "date-fns-tz": "^1.3.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@octocloud/validators": "^1.0.2",
     "@types/jest": "^29.4.0",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
