--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/octotravel/octo-generator#readme",
   "dependencies": {
-    "@octocloud/types": "1.5.13",
+    "@octocloud/types": "^1.5.13",
     "date-fns": "^2.29.1",
     "date-fns-tz": "^1.3.6",
     "uuid": "^9.0.0"
