--- a/.github/workflows/check-version-pr.yml
+++ b/.github/workflows/check-version-pr.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   check-version:
+    name: Check Version
     runs-on: ubuntu-latest
     steps:
       - name: Checkout PR branch
@@ -18,7 +19,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: 20
 
       - name: Get PR version
         id: pr_version
