--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	},
 	"types": "dist/index.d.ts",
 	"dependencies": {
-		"@octocloud/types": "^1.5.34",
+		"@octocloud/types": "github:octotravel/octo-types#spike/openapi-types-generation",
 		"date-fns": "^2.29.1",
 		"date-fns-tz": "^1.3.6",
 		"uuid": "^9.0.0"
