--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@octocloud/validator": "octotravel/validator#biomejs",
-		"@types/uuid": "^9.0.0",
 		"@types/node": "^22.9.0",
-		"typescript": "^5.7.2",
-		"@vitest/coverage-v8": "2.1.3",
+		"@types/uuid": "9.0.0",
+		"@vitest/coverage-v8": "2.1.9",
 		"audit-ci": "7.1.0",
 		"lefthook": "1.10.10",
-		"tsup": "8.3.5",
-		"vite": "5.4.14",
+		"tsup": "8.5.0",
+		"typescript": "5.7.2",
+		"vite": "5.4.19",
 		"vitest": "2.1.3",
 		"vitest-mock-extended": "2.0.2"
 	},
