--- a/package.json
+++ b/package.json
@@ -38,18 +38,17 @@
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.1.0",
-		"@octocloud/validator": "octotravel/validator#biomejs",
+		"@biomejs/biome": "2.2.2",
+		"@octocloud/validator": "octotravel/validator#main",
 		"@types/uuid": "^9.0.0",
 		"@types/node": "^22.9.0",
 		"typescript": "^5.7.2",
-		"@vitest/coverage-v8": "2.1.3",
-		"audit-ci": "7.1.0",
-		"lefthook": "1.10.10",
-		"tsup": "8.3.5",
-		"vite": "5.4.14",
-		"vitest": "2.1.3",
-		"vitest-mock-extended": "2.0.2"
+		"@vitest/coverage-v8": "^3.2.4",
+		"audit-ci": "^7.1.0",
+		"lefthook": "^1.10.10",
+		"tsup": "^8.5.0",
+		"vitest": "^3.2.4",
+		"vitest-mock-extended": "^3.1.0"
 	},
 	"keywords": []
 }
