--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"outDir": "dist",
-		"target": "ESNext",
+		"target": "ES2021",
 		"module": "CommonJS",
 		"strict": true,
 		"esModuleInterop": true,
