--- a/package.json
+++ b/package.json
@@ -40,15 +40,15 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.2.2",
 		"@octocloud/validator": "octotravel/validator#main",
-		"@types/uuid": "^9.0.0",
-		"@types/node": "^22.9.0",
-		"typescript": "^5.7.2",
-		"@vitest/coverage-v8": "^3.2.4",
-		"audit-ci": "^7.1.0",
-		"lefthook": "^1.10.10",
-		"tsup": "^8.5.0",
-		"vitest": "^3.2.4",
-		"vitest-mock-extended": "^3.1.0"
+		"@types/uuid": "9.0.0",
+		"@types/node": "22.15.21",
+		"typescript": "5.8.3",
+		"@vitest/coverage-v8": "3.2.4",
+		"audit-ci": "7.1.0",
+		"lefthook": "1.10.10",
+		"tsup": "8.5.0",
+		"vitest": "3.2.4",
+		"vitest-mock-extended": "3.1.0"
 	},
 	"keywords": []
 }
