--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@octocloud/generators",
-	"version": "1.0.12",
+	"version": "1.0.13",
 	"description": "",
 	"license": "MIT",
 	"author": "",
@@ -32,24 +32,23 @@
 	},
 	"types": "dist/index.d.ts",
 	"dependencies": {
-		"@octocloud/types": "^1.5.34",
+		"@octocloud/types": "^1.5.41",
 		"date-fns": "^2.29.1",
 		"date-fns-tz": "^1.3.6",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@octocloud/validator": "octotravel/validator#biomejs",
-		"@types/uuid": "^9.0.0",
-		"@types/node": "^22.9.0",
-		"typescript": "^5.7.2",
-		"@vitest/coverage-v8": "2.1.3",
+		"@biomejs/biome": "2.2.2",
+		"@octocloud/validator": "octotravel/validator#main",
+		"@types/uuid": "9.0.0",
+		"@types/node": "22.15.1",
+		"typescript": "5.8.3",
+		"@vitest/coverage-v8": "3.2.4",
 		"audit-ci": "7.1.0",
 		"lefthook": "1.10.10",
-		"tsup": "8.3.5",
-		"vite": "5.4.14",
-		"vitest": "2.1.3",
-		"vitest-mock-extended": "2.0.2"
+		"tsup": "8.5.0",
+		"vitest": "3.2.4",
+		"vitest-mock-extended": "3.1.0"
 	},
 	"keywords": []
 }
