--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,9 +6,10 @@ on:
       - master
       - main
 
-env:
-  NODE_VERSION: 22.15.1
-
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
+  
 jobs:
   publish-npm:
     name: Publish to NPM
@@ -16,13 +17,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: '24'
           registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/cache@v4
